# LibreCAL

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: Build.yml  Release_tag_stable.yml
Documentation/: SCPI_API.tex  manual.tex
Hardware/: .gitignore  BOM.csv  TopCover.step  TopCover_2D_TextLaserEngraving.FCStd  TopCover_2D_TextLaserEngraving.dxf
Hardware/Blockdiagram/: eCal.tex
Software/: .gitignore  52-LibreCAL.rules  SCPI_commands.txt
Software/LibreCAL/: .gitignore  CMakeLists.txt
Software/LibreCAL/FreeRTOS-Kernel/: History.txt  croutine.c  event_groups.c  list.c  queue.c  stream_buffer.c  tasks.c  timers.c
Software/LibreCAL/FreeRTOS-Kernel/include/: FreeRTOS.h  StackMacros.h  croutine.h  deprecated_definitions.h  event_groups.h  message_buffer.h  mpu_prototypes.h  portable.h  queue.h  semphr.h  stream_buffer.h  task.h  timers.h
Software/LibreCAL/FreeRTOS-Kernel/portable/GCC/ARM_CM0/: port.c
Software/LibreCAL/FreeRTOS-Kernel/portable/MemMang/: heap_4.c
Software/LibreCAL/src/: Flash.cpp  Flash.hpp  FreeRTOSConfig.h  Heater.cpp  Heater.hpp  Log.cpp  Log.h  SCPI.cpp  SCPI.hpp  Switch.cpp  Switch.hpp  Touchstone.cpp  Touchstone.hpp  UserInterface.cpp  UserInterface.hpp  freertos.c  main.c  main.cpp  main.h  serial.c  serial.h
Software/LibreCAL/src/USB/: msc_disk.c  msc_disk.cpp  siglent_tmc.cpp  tmc.cpp  tusb_config.h  usb.c  usb.h  usb_descriptors.c  usb_descriptors.h
Software/LibreCAL/src/fatfs/: ff.c  ff.h  ffconf.h  ffsystem.c  ffunicode.c  flashdisk.cpp  flashdisk.h  ramdisk.c  ramdisk.c_backup  ramdisk.h  tf_card.c_backup  tf_card.h_backup
(+105 files in other folders)
